# hexGame

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md
assets/layouts/: main.lua
assets/shaders/: HexFragment.glsl  HexMiniFragment.glsl  HexOverlayFragment.glsl  MiniLocVertex.glsl  TexPassFragment.glsl  TexPassVertex.glsl  TextFragment.glsl  TextVertex.glsl  tbFrag.glsl  tbVert.glsl
assets/shaders/330_core/: HexFragment.glsl  HexMiniVertex.glsl  HexVertex.glsl
assets/shaders/es_2.0/: HexFragment.glsl  HexMiniVertex.glsl  HexOverlayFragment.glsl  HexVertex.glsl  MiniLocFragment.glsl  MiniLocVertex.glsl  TexPassFragment.glsl  TexPassVertex.glsl  TextFragment.glsl  TextVertex.glsl  tbFrag.glsl  tbVert.glsl
src/: Application.cpp  Application.h  hexlua.cpp  hexlua.h  loWcore.c  loWcore.h  main.c  main.cpp  settings.cpp  settings.h
src/gui/: glwidget.cpp  glwidget.h  mapwidget.cpp  mapwidget.h  minimapwidget.cpp  minimapwidget.h  root_widget.cpp  root_widget.h
src/gui/tb/: tb_image_loader_stb.cpp  tb_system_linux.cpp  tb_window.h
src/include/: c_raii.h  hextypes.h
src/render/: distancemap.c  distancemap.h  gl_util.h  glcapabilities.cpp  glcapabilities.h  imageutils.c  imageutils.cpp  imageutils.h  maprender.c  maprender.cpp  maprender.h  minimaprender.cpp  minimaprender.h  rendertext.c  rendertext.h  shaders.c  shaders.cpp  shaders.h  tbrenderer.cpp  tbrenderer.h
src/state/: city.c  city.cpp  city.h  gtypes.h  map.c  map.cpp  map.h  mapmove.c  mapmove.cpp  unit.c  unit.cpp  unit.h
src/util/: string.c  string.h
